QtBeef/src/Qt/qformlayout.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QFormLayout
// --------------------------------------------------------------
[CRepr]
struct QFormLayout_Ptr: void
{
}
extension CQt
{
	[LinkName("QFormLayout_new")]
	public static extern QFormLayout_Ptr* QFormLayout_new(QWidget_Ptr* parent);
	[LinkName("QFormLayout_new2")]
	public static extern QFormLayout_Ptr* QFormLayout_new2();
	[LinkName("QFormLayout_Delete")]
	public static extern void QFormLayout_Delete(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_MetaObject")]
	public static extern QMetaObject_Ptr* QFormLayout_MetaObject(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_Qt_Metacast")]
	public static extern void* QFormLayout_Qt_Metacast(QFormLayout_Ptr* self, c_char* param1);
	[LinkName("QFormLayout_Qt_Metacall")]
	public static extern c_int QFormLayout_Qt_Metacall(QFormLayout_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QFormLayout_Tr")]
	public static extern libqt_string QFormLayout_Tr(c_char* s);
	[LinkName("QFormLayout_SetFieldGrowthPolicy")]
	public static extern void QFormLayout_SetFieldGrowthPolicy(QFormLayout_Ptr* self, QFormLayout_FieldGrowthPolicy policy);
	[LinkName("QFormLayout_FieldGrowthPolicy")]
	public static extern QFormLayout_FieldGrowthPolicy QFormLayout_FieldGrowthPolicy(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_SetRowWrapPolicy")]
	public static extern void QFormLayout_SetRowWrapPolicy(QFormLayout_Ptr* self, QFormLayout_RowWrapPolicy policy);
	[LinkName("QFormLayout_RowWrapPolicy")]
	public static extern QFormLayout_RowWrapPolicy QFormLayout_RowWrapPolicy(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_SetLabelAlignment")]
	public static extern void QFormLayout_SetLabelAlignment(QFormLayout_Ptr* self, void* alignment);
	[LinkName("QFormLayout_LabelAlignment")]
	public static extern void* QFormLayout_LabelAlignment(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_SetFormAlignment")]
	public static extern void QFormLayout_SetFormAlignment(QFormLayout_Ptr* self, void* alignment);
	[LinkName("QFormLayout_FormAlignment")]
	public static extern void* QFormLayout_FormAlignment(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_SetHorizontalSpacing")]
	public static extern void QFormLayout_SetHorizontalSpacing(QFormLayout_Ptr* self, c_int spacing);
	[LinkName("QFormLayout_HorizontalSpacing")]
	public static extern c_int QFormLayout_HorizontalSpacing(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_SetVerticalSpacing")]
	public static extern void QFormLayout_SetVerticalSpacing(QFormLayout_Ptr* self, c_int spacing);
	[LinkName("QFormLayout_VerticalSpacing")]
	public static extern c_int QFormLayout_VerticalSpacing(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_Spacing")]
	public static extern c_int QFormLayout_Spacing(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_SetSpacing")]
	public static extern void QFormLayout_SetSpacing(QFormLayout_Ptr* self, c_int spacing);
	[LinkName("QFormLayout_AddRow")]
	public static extern void QFormLayout_AddRow(QFormLayout_Ptr* self, QWidget_Ptr* label, QWidget_Ptr* field);
	[LinkName("QFormLayout_AddRow2")]
	public static extern void QFormLayout_AddRow2(QFormLayout_Ptr* self, QWidget_Ptr* label, QLayout_Ptr* field);
	[LinkName("QFormLayout_AddRow3")]
	public static extern void QFormLayout_AddRow3(QFormLayout_Ptr* self, libqt_string* labelText, QWidget_Ptr* field);
	[LinkName("QFormLayout_AddRow4")]
	public static extern void QFormLayout_AddRow4(QFormLayout_Ptr* self, libqt_string* labelText, QLayout_Ptr* field);
	[LinkName("QFormLayout_AddRow5")]
	public static extern void QFormLayout_AddRow5(QFormLayout_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QFormLayout_AddRow6")]
	public static extern void QFormLayout_AddRow6(QFormLayout_Ptr* self, QLayout_Ptr* layout);
	[LinkName("QFormLayout_InsertRow")]
	public static extern void QFormLayout_InsertRow(QFormLayout_Ptr* self, c_int row, QWidget_Ptr* label, QWidget_Ptr* field);
	[LinkName("QFormLayout_InsertRow2")]
	public static extern void QFormLayout_InsertRow2(QFormLayout_Ptr* self, c_int row, QWidget_Ptr* label, QLayout_Ptr* field);
	[LinkName("QFormLayout_InsertRow3")]
	public static extern void QFormLayout_InsertRow3(QFormLayout_Ptr* self, c_int row, libqt_string* labelText, QWidget_Ptr* field);
	[LinkName("QFormLayout_InsertRow4")]
	public static extern void QFormLayout_InsertRow4(QFormLayout_Ptr* self, c_int row, libqt_string* labelText, QLayout_Ptr* field);
	[LinkName("QFormLayout_InsertRow5")]
	public static extern void QFormLayout_InsertRow5(QFormLayout_Ptr* self, c_int row, QWidget_Ptr* widget);
	[LinkName("QFormLayout_InsertRow6")]
	public static extern void QFormLayout_InsertRow6(QFormLayout_Ptr* self, c_int row, QLayout_Ptr* layout);
	[LinkName("QFormLayout_RemoveRow")]
	public static extern void QFormLayout_RemoveRow(QFormLayout_Ptr* self, c_int row);
	[LinkName("QFormLayout_RemoveRow2")]
	public static extern void QFormLayout_RemoveRow2(QFormLayout_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QFormLayout_RemoveRow3")]
	public static extern void QFormLayout_RemoveRow3(QFormLayout_Ptr* self, QLayout_Ptr* layout);
	[LinkName("QFormLayout_TakeRow")]
	public static extern QFormLayout_TakeRowResult QFormLayout_TakeRow(QFormLayout_Ptr* self, c_int row);
	[LinkName("QFormLayout_TakeRow2")]
	public static extern QFormLayout_TakeRowResult QFormLayout_TakeRow2(QFormLayout_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QFormLayout_TakeRow3")]
	public static extern QFormLayout_TakeRowResult QFormLayout_TakeRow3(QFormLayout_Ptr* self, QLayout_Ptr* layout);
	[LinkName("QFormLayout_SetItem")]
	public static extern void QFormLayout_SetItem(QFormLayout_Ptr* self, c_int row, QFormLayout_ItemRole role, QLayoutItem_Ptr* item);
	[LinkName("QFormLayout_SetWidget")]
	public static extern void QFormLayout_SetWidget(QFormLayout_Ptr* self, c_int row, QFormLayout_ItemRole role, QWidget_Ptr* widget);
	[LinkName("QFormLayout_SetLayout")]
	public static extern void QFormLayout_SetLayout(QFormLayout_Ptr* self, c_int row, QFormLayout_ItemRole role, QLayout_Ptr* layout);
	[LinkName("QFormLayout_SetRowVisible")]
	public static extern void QFormLayout_SetRowVisible(QFormLayout_Ptr* self, c_int row, bool on);
	[LinkName("QFormLayout_SetRowVisible2")]
	public static extern void QFormLayout_SetRowVisible2(QFormLayout_Ptr* self, QWidget_Ptr* widget, bool on);
	[LinkName("QFormLayout_SetRowVisible3")]
	public static extern void QFormLayout_SetRowVisible3(QFormLayout_Ptr* self, QLayout_Ptr* layout, bool on);
	[LinkName("QFormLayout_IsRowVisible")]
	public static extern bool QFormLayout_IsRowVisible(QFormLayout_Ptr* self, c_int row);
	[LinkName("QFormLayout_IsRowVisible2")]
	public static extern bool QFormLayout_IsRowVisible2(QFormLayout_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QFormLayout_IsRowVisible3")]
	public static extern bool QFormLayout_IsRowVisible3(QFormLayout_Ptr* self, QLayout_Ptr* layout);
	[LinkName("QFormLayout_ItemAt")]
	public static extern QLayoutItem_Ptr* QFormLayout_ItemAt(QFormLayout_Ptr* self, c_int row, QFormLayout_ItemRole role);
	[LinkName("QFormLayout_GetItemPosition")]
	public static extern void QFormLayout_GetItemPosition(QFormLayout_Ptr* self, c_int index, c_int* rowPtr, QFormLayout_ItemRole* rolePtr);
	[LinkName("QFormLayout_GetWidgetPosition")]
	public static extern void QFormLayout_GetWidgetPosition(QFormLayout_Ptr* self, QWidget_Ptr* widget, c_int* rowPtr, QFormLayout_ItemRole* rolePtr);
	[LinkName("QFormLayout_GetLayoutPosition")]
	public static extern void QFormLayout_GetLayoutPosition(QFormLayout_Ptr* self, QLayout_Ptr* layout, c_int* rowPtr, QFormLayout_ItemRole* rolePtr);
	[LinkName("QFormLayout_LabelForField")]
	public static extern QWidget_Ptr* QFormLayout_LabelForField(QFormLayout_Ptr* self, QWidget_Ptr* field);
	[LinkName("QFormLayout_LabelForField2")]
	public static extern QWidget_Ptr* QFormLayout_LabelForField2(QFormLayout_Ptr* self, QLayout_Ptr* field);
	[LinkName("QFormLayout_AddItem")]
	public static extern void QFormLayout_AddItem(QFormLayout_Ptr* self, QLayoutItem_Ptr* item);
	[LinkName("QFormLayout_ItemAt2")]
	public static extern QLayoutItem_Ptr* QFormLayout_ItemAt2(QFormLayout_Ptr* self, c_int index);
	[LinkName("QFormLayout_TakeAt")]
	public static extern QLayoutItem_Ptr* QFormLayout_TakeAt(QFormLayout_Ptr* self, c_int index);
	[LinkName("QFormLayout_SetGeometry")]
	public static extern void QFormLayout_SetGeometry(QFormLayout_Ptr* self, QRect_Ptr* rect);
	[LinkName("QFormLayout_MinimumSize")]
	public static extern QSize_Ptr QFormLayout_MinimumSize(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_SizeHint")]
	public static extern QSize_Ptr QFormLayout_SizeHint(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_Invalidate")]
	public static extern void QFormLayout_Invalidate(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_HasHeightForWidth")]
	public static extern bool QFormLayout_HasHeightForWidth(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_HeightForWidth")]
	public static extern c_int QFormLayout_HeightForWidth(QFormLayout_Ptr* self, c_int width);
	[LinkName("QFormLayout_ExpandingDirections")]
	public static extern void* QFormLayout_ExpandingDirections(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_Count")]
	public static extern c_int QFormLayout_Count(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_RowCount")]
	public static extern c_int QFormLayout_RowCount(QFormLayout_Ptr* self);
	[LinkName("QFormLayout_Tr2")]
	public static extern libqt_string QFormLayout_Tr2(c_char* s, c_char* c);
	[LinkName("QFormLayout_Tr3")]
	public static extern libqt_string QFormLayout_Tr3(c_char* s, c_char* c, c_int n);
}
